<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="receive_in_morse"
        android:title="@string/receive_in_morse_code" />

    <PreferenceCategory android:title="@string/header_custom_notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="is_custom_notifications_enabled"
            android:title="@string/on_message_received" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="custom_vibration"
            android:dependency="is_custom_notifications_enabled"
            android:title="@string/custom_vibration" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="custom_sound"
            android:dependency="is_custom_notifications_enabled"
            android:title="@string/custom_sound" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="custom_light"
            android:dependency="is_custom_notifications_enabled"
            android:title="@string/custom_light" />

    </PreferenceCategory>

</PreferenceScreen>
