<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/vibration_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualization_vibration" />

    <Button
        android:id="@+id/sound_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualization_sound" />

    <Button
        android:id="@+id/back_flash_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/visualization_flash" />

</LinearLayout>