<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/note_title"
        android:textStyle="bold"
        android:padding="4dp"
        tools:text="@string/dialog_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note_text"
        android:layout_below="@+id/note_title"
        android:padding="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:text="@string/dialog_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/note_data"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/note_text"
        android:padding="4dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/dialog_date" />
</RelativeLayout>